modifying the code to add better UI

--- a/src/Component/AlbumForm/albumform.module.css
+++ b/src/Component/AlbumForm/albumform.module.css
@@ -2,6 +2,10 @@
 .input{
     width: 55%;
     margin: 0 2%;
+    background-color: transparent;
+    border:none;
+    border-bottom: 2px solid #ff7900;
+    border-radius: 0;
 }
 
 /* buttons inside the form */
@@ -15,10 +19,13 @@
 
 /* clear button */
 .clearBtn{
-    background-color:#f95d9b;
+    background-color:rgb(245, 41, 41);
+    color:white;
 }
 
 /* add button */
 .addBtn{
-    background-color:#3235b9;
+    background-color:rgb(115, 183, 14);
+    color:white;
+    padding-top: 3px;
 }
