--- a/src/Component/ImageForm/imageForm.module.css
+++ b/src/Component/ImageForm/imageForm.module.css
@@ -2,7 +2,11 @@
 /* input box  */
 .inputBox{
     width: 43%;
-    margin-right: 2%;    
+    margin-right: 2%;   
+    background-color: transparent;
+    border:none;
+    border-bottom: 2px solid #ff7900;
+    border-radius: 0; 
 }
 
 /* buttons */
@@ -15,7 +19,7 @@
 
 /* add button */
 .add{
-    background-color: #2a3287;
+    background-color: #74B70D;
 }
 
 /* clear button */
