--- a/src/Component/Album/album.module.css
+++ b/src/Component/Album/album.module.css
@@ -7,27 +7,48 @@
     margin: 10px;
     border-radius: 5px;
     overflow: hidden;
-    box-shadow: 0px 0px 4px 0px lightgrey;
-    background-color: #777879;
-    padding: 5px 5px 0 5px;
-    color: white;
+    box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.2);
+    background-color: white;
+    padding: 5px 5px 5px 5px;
+    color: #777879;
     cursor: pointer;
 }
 
+.cardContainer:hover{
+    color:white;
+}
 /* album logo */
 .cardImage{
     width: 100%;
-    height: 85%;
-    background-image: url("../../files/Images/album_3.jpg");
-    background-size: cover;
+    height: 100%;
+    background-image: url("https://cdn-icons-png.flaticon.com/128/3342/3342137.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    /* background-size: contain; */
+}
+.cardContainer:hover .cardImage{
+    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7478%) hue-rotate(265deg) brightness(100%) contrast(115%);
+
 }
 
 /* album name */
 .cardName{
-    width: 100%;
+    width: 60%;
+    margin:auto;
     height: 15%;
+    margin-top: 0.5rem;
+    padding-top: 0.2rem;
+    text-transform: capitalize;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    /* box-shadow: 2px 2px 6px 10px #00000010; */
 }
 
 .cardContainer:hover{
-    background-color:#577fdb;
+    background-color: #FF7900;
+}
+
+.cardContainer:hover .cardName{
+   border-top: 1px solid white;
 }
