--- a/src/Component/AlbumList/albumlist.module.css
+++ b/src/Component/AlbumList/albumlist.module.css
@@ -35,12 +35,13 @@
     float:left;
     font-size: 2.2rem;
     font-weight:bold;
-    color: #bcb7f5;
-    font-family: cursive;
+    /* color: #bcb7f5; */
+    color:#FF7900;
+    font-family:monospace;
 }
 
 .header span:hover{
-    color:#4939ff;
+    color:#FF7900;
 }
 
 /* for button create album */
@@ -49,6 +50,13 @@
     float: right;
     height: 31px;
     color: white;
-    width: 100px;
-    background-color: #f44336;
+    width: fit-content;
+    padding: 0.5rem 1rem;
+    background-color: #FF7900;
+    border:2px solid #FF7900;
+    font-weight: bold;
+}
+.btn:hover{
+    background-color: white;
+    color:#FF7900;
 }
