--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,16 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family:monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: radial-gradient( circle 811px at 17.3% 40.2%,  rgba(16,12,37,0.91) 33.4%, rgba(14,1,81,0.85) 90% );
+  background-color: white;;
   background-attachment:fixed;
 }
 
 /* common style for all the heading tags  */
 h1{
   color:#649dab;
-  font-family: cursive;
+  font-family: monospace;
 }
 
 h1:hover{
@@ -50,9 +48,15 @@ input:focus{
   text-align: center;
   height: 150px;
   width: 100%;
-  background-image: radial-gradient( circle 858.6px at 10% 20%, rgb(127 80 101) 0%, rgb(143 122 157) 90% );
+  /* background-image: radial-gradient( circle 858.6px at 10% 20%, rgb(127 80 101) 0%, rgb(143 122 157) 90% ); */
+  background-color:#0010551e;
   border-radius: 10px;
   box-shadow: -2px 2px 7px 0px grey;
+}
+
+.formContainer h1{
+  color:#001055;
+  text-transform: capitalize;
 }
 
 /* lightbox styles */
